Build the xml layout for the registration fragment. Also I lock all our activities to portrait only

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,7 +20,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/loginLoginBtn"
+        android:text="@string/loginBtn"
         android:id="@+id/loginBtn"
         android:paddingLeft="10dp"
         android:layout_marginLeft="20dp"
