--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/registerNameTxt"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:hint="@string/registerNamePlaceholder" />
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/registerEmailTxt"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:hint="@string/registerEmailPlaceholder" />
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText3"
+            android:id="@+id/registerPasswordTxt"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:hint="@string/registerPasswordPlaceholder" />
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText4"
+            android:id="@+id/registerConfirmPassword"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:hint="@string/registerPasswordPlaceholderConfirm" />
