Beautified Pings page with background colors and layout formatting

--- a/app/src/main/res/layout/fragment_pings_page.xml
+++ b/app/src/main/res/layout/fragment_pings_page.xml
@@ -6,9 +6,12 @@
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listview_pings"/>
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listview_pings"
+        android:dividerHeight="3dp"
+        android:divider="@android:color/white"
+        android:clickable="false" />
 
 
 </FrameLayout>
