Adjusted the keyboard input mode in the manifest to prevent view shrinking on tablets and phablets. Also fixed some margin issues with the login screen to make it more usable

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,14 +10,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView2"
-        android:layout_margin="50dp">
+        android:id="@+id/scrollView2">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:padding="50dp">
 
             <ImageView
                 android:layout_width="80dp"
