--- a/app/src/main/res/layout/dialog_signin.xml
+++ b/app/src/main/res/layout/dialog_signin.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Signing into PingIT..."
+        android:text="@string/signingInDialogMsg"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:layout_margin="10dp" />
