--- a/app/src/main/res/layout/dialog_signin.xml
+++ b/app/src/main/res/layout/dialog_signin.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/signingInDialogMsg"
-        android:id="@+id/textView"
+        android:id="@+id/signInDialogText"
         android:layout_gravity="center_horizontal"
         android:layout_margin="10dp" />
 
