--- a/app/src/main/res/layout/fragment_faqpage.xml
+++ b/app/src/main/res/layout/fragment_faqpage.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_faqpage"
     tools:context="edu.gcc.whiletrue.pingit.FAQPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
