--- a/app/src/main/res/layout/fragment_pings_page.xml
+++ b/app/src/main/res/layout/fragment_pings_page.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_pings_page"
     tools:context="edu.gcc.whiletrue.pingit.PingsPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
