Clicks on the FAQ will recognize the proper FAQ and send it's data to the new fragment. Crashes during the fragment transaction. I renamed the ViewPager as well.

--- a/app/src/main/res/layout/fragment_faqpage.xml
+++ b/app/src/main/res/layout/fragment_faqpage.xml
@@ -7,10 +7,11 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ListView
+        android:id="@+id/listView_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView_categories"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:clickable="true" />
+        android:clickable="true"
+        />
 </RelativeLayout>
