We are now properly replacing the FAQ screen, but the data is not sending yet.

--- a/app/src/main/res/layout/fragment_faqpage.xml
+++ b/app/src/main/res/layout/fragment_faqpage.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/faq_containter"
     tools:context="edu.gcc.whiletrue.pingit.FAQPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,4 +15,5 @@
         android:layout_centerHorizontal="true"
         android:clickable="true"
         />
+
 </RelativeLayout>
