--- a/app/src/main/res/layout/fragment_faq_expanded.xml
+++ b/app/src/main/res/layout/fragment_faq_expanded.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.gcc.whiletrue.pingit.RegisterFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/expanded_faq_fragment">
     <FrameLayout
         android:id="@+id/expanded_faq_container"
         android:layout_width="match_parent"
