--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.gcc.whiletrue.pingit.HomeActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_home_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         android:icon="@android:drawable/ic_menu_preferences"
