--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,7 +21,7 @@
         android:summary="%s"
         android:entries="@array/resendDelayValues"
         android:entryValues="@array/resendDelayValues"
-        android:dependency="notification_resend_toggle" />
+        android:dependency="@string/prefs_notification_resend_toggle_key" />
     <EditTextPreference
         android:key="@string/prefs_display_name_key"
         android:title="@string/prefs_display_name_title"
