--- a/app/src/main/res/layout/fragment_chat_page.xml
+++ b/app/src/main/res/layout/fragment_chat_page.xml
@@ -1,13 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.gcc.whiletrue.pingit.ChatPageFragment">
+    android:orientation="vertical"
+    tools:context="edu.gcc.whiletrue.pingit.ChatPageFragment"
+    android:weightSum="1">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <Button
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Chat page. Please remove this textview" />
-
-</FrameLayout>
+        android:text="LAUNCH CHAT"
+        android:id="@+id/launchChatButt"
+        android:layout_gravity="center_horizontal" />
+</LinearLayout>
