--- a/app/src/main/res/layout/view_content.xml
+++ b/app/src/main/res/layout/view_content.xml
@@ -4,14 +4,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/text"
+    <com.andexert.expandablelayout.library.ExpandableLayoutListView
+        android:id="@+id/nestedListView"
+        xmlns:expandable="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:hint="Hello World !"
-        android:textColor="@android:color/white"
-        android:background="#c0392b"/>
+        android:layout_height="match_parent"/>
 
 
 </RelativeLayout>
