--- a/app/src/main/res/layout/view_content.xml
+++ b/app/src/main/res/layout/view_content.xml
@@ -8,7 +8,7 @@
         android:id="@+id/nestedListView"
         xmlns:expandable="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="300dp"/>
 
 
 </RelativeLayout>
