Cleaned up the ui on faq so there's less... red

--- a/app/src/main/res/layout/internal_header.xml
+++ b/app/src/main/res/layout/internal_header.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:padding="10dp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:text="ExpandableLayout Header!"
         android:gravity="center"/>
 
