--- a/app/src/main/res/layout/view_row.xml
+++ b/app/src/main/res/layout/view_row.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         expandable:el_headerLayout="@layout/view_header"
         expandable:el_contentLayout="@layout/view_content"
-        android:background="#e74c3c"/>
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        />
 
 </RelativeLayout>
