--- a/app/src/main/res/layout/view_content.xml
+++ b/app/src/main/res/layout/view_content.xml
@@ -9,7 +9,8 @@
         xmlns:expandable="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:nestedScrollingEnabled="true"
-        android:layout_height="150dp"/>
+        android:layout_height="150dp"
+        android:paddingLeft="20dp"/>
 
 
 </RelativeLayout>
