--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#d32f2f</color>
     <color name="colorPrimaryDark">#b71c1c</color>
     <color name="colorAccent">#F44336</color>
-    <color name="colorDarkGray">#505050</color>
+    <color name="colorDarkGray">#424242</color>
+    <color name="colorLightGray">#EEEEEE</color>
 </resources>
