Make all 4 text boxes, 2 on Login, and the name preference one line in the XML. Still working on actually preventing an invalid name change in settings.

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -32,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
+                android:singleLine="true"
                 android:ems="10"
                 android:id="@+id/registerNameTxt"
                 android:layout_gravity="center_horizontal"
@@ -42,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
+                android:singleLine="true"
                 android:ems="10"
                 android:id="@+id/registerEmailTxt"
                 android:layout_gravity="center_horizontal"
@@ -52,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:singleLine="true"
                 android:ems="10"
                 android:id="@+id/registerPasswordTxt"
                 android:layout_gravity="center_horizontal"
@@ -62,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:singleLine="true"
                 android:ems="10"
                 android:id="@+id/registerConfirmPassword"
                 android:layout_gravity="center_horizontal"
