--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
+                android:singleLine="true"
                 android:ems="10"
                 android:id="@+id/loginEmailTxt"
                 android:layout_gravity="center_horizontal"
@@ -41,6 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:singleLine="true"
                 android:ems="10"
                 android:id="@+id/loginPasswordTxt"
                 android:layout_gravity="center_horizontal"
