FINNNALY got the two ping page fragments to work correctly!!!

--- a/app/src/main/res/layout/fragment_pings_loading.xml
+++ b/app/src/main/res/layout/fragment_pings_loading.xml
@@ -1,13 +1,23 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.gcc.whiletrue.pingit.pingsLoadingFragment">
+    android:orientation="vertical"
+    tools:context=".PingsLoadingFragment"
+    android:padding="20dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/loadingPings"
+            android:id="@+id/signInDialogText"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp" />
 
-</FrameLayout>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_gravity="center_horizontal" />
+
+</LinearLayout>
