--- a/app/src/main/res/layout/fragment_pings_loading.xml
+++ b/app/src/main/res/layout/fragment_pings_loading.xml
@@ -6,18 +6,27 @@
     tools:context=".PingsLoadingFragment"
     android:padding="20dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/loadingPings"
-            android:id="@+id/signInDialogText"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/loadingPings"
+        android:id="@+id/signInDialogText"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp" />
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center_horizontal" />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_gravity="center_horizontal"
+        android:visibility="invisible" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/retryConnection"
+        android:id="@+id/btnRetry"
+        android:layout_gravity="center_horizontal"
+        android:visibility="invisible" />
 
 </LinearLayout>
