--- a/app/src/main/res/layout/fragment_pings_loading.xml
+++ b/app/src/main/res/layout/fragment_pings_loading.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_gravity="center_horizontal"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <Button
         android:layout_width="wrap_content"
