--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -22,7 +22,7 @@
         android:entries="@array/resendDelayValues"
         android:entryValues="@array/resendDelayValues"
         android:dependency="@string/prefs_notification_resend_toggle_key" />
-    <edu.gcc.whiletrue.pingit.ChangeDisplayNamePreference
+    <EditTextPreference
         android:key="@string/prefs_display_name_key"
         android:title="@string/prefs_display_name_title"
         android:summary="@string/prefs_display_name_summary"
