set max length on friendly name to 30 chars

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -36,7 +36,8 @@
                 android:id="@+id/registerNameTxt"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:hint="@string/registerNamePlaceholder" />
+                android:hint="@string/registerNamePlaceholder"
+                android:maxLength="30"/>
 
             <EditText
                 android:layout_width="match_parent"
