--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -26,7 +26,8 @@
         android:key="@string/prefs_display_name_key"
         android:title="@string/prefs_display_name_title"
         android:summary="@string/prefs_display_name_summary"
-        android:dialogMessage="@string/prefs_display_name_dialogmessage" />
+        android:dialogMessage="@string/prefs_display_name_dialogmessage"
+        android:maxLength="30"/>
     <edu.gcc.whiletrue.pingit.ClearPingsDialogPreference
         android:key="@string/prefs_clear_pings_key"
         android:title="@string/prefs_clear_pings_title"
