--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -47,7 +47,8 @@
                 android:id="@+id/registerEmailTxt"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:hint="@string/registerEmailPlaceholder" />
+                android:hint="@string/registerEmailPlaceholder"
+                android:maxLength="30"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -57,7 +58,8 @@
                 android:id="@+id/registerPasswordTxt"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:hint="@string/registerPasswordPlaceholder" />
+                android:hint="@string/registerPasswordPlaceholder"
+                android:maxLength="30"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -67,7 +69,8 @@
                 android:id="@+id/registerConfirmPassword"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:hint="@string/registerPasswordPlaceholderConfirm" />
+                android:hint="@string/registerPasswordPlaceholderConfirm"
+                android:maxLength="30"/>
 
             <LinearLayout
                 android:orientation="horizontal"
