--- a/app/src/main/res/layout/fragment_pings_page.xml
+++ b/app/src/main/res/layout/fragment_pings_page.xml
@@ -1,36 +1,42 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_pings_page"
     tools:context="edu.gcc.whiletrue.pingit.PingsPageFragment">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/swipeRefreshLayout">
 
-        <ListView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listview_pings"
-            android:dividerHeight="3dp"
-            android:divider="@android:color/white"
-            android:clickable="false" />
-
-        <ScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <TextView
+
+            <ListView
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/listview_pings"
+                android:dividerHeight="3dp"
+                android:divider="@android:color/white"
+                android:clickable="false" />
+
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/noPingsTxt"
-                android:text="@string/noPings"
-                android:gravity="center_horizontal"
-                android:padding="20dp"/>
-        </ScrollView>
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/noPingsTxt"
+                    android:text="@string/noPings"
+                    android:gravity="center_horizontal"
+                    android:padding="20dp"/>
+            </ScrollView>
 
-    </LinearLayout>
+        </LinearLayout>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
+</FrameLayout>
