updated chat screen with initial msg

--- a/app/src/main/res/layout/fragment_chat_page.xml
+++ b/app/src/main/res/layout/fragment_chat_page.xml
@@ -8,29 +8,45 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:text="LAUNCH CHAT"
-        android:id="@+id/launchChatButt"
-        android:layout_gravity="center_horizontal"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Tap to connect with a helpdesk specialist."
-        android:textAlignment="center"
-        android:id="@+id/textView"
-        android:layout_above="@+id/launchChatButt" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textAlignment="center"
         android:id="@+id/numOnlineAdmins"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/initialMessage"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/startChat"
+        android:id="@+id/launchChatButt"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/initialMessage"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/describeProblem"
+        android:id="@+id/plzDescProb"
+        android:layout_above="@+id/initialMessage"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
