--- a/app/src/main/res/layout/internal_header.xml
+++ b/app/src/main/res/layout/internal_header.xml
@@ -11,6 +11,6 @@
         android:padding="10dp"
         android:textColor="@android:color/black"
         android:text="ExpandableLayout Header!"
-        android:gravity="center"/>
+        android:gravity="left"/>
 
 </RelativeLayout>
