Fixed loading dialog on pings page

--- a/app/src/main/res/layout/fragment_pings_page.xml
+++ b/app/src/main/res/layout/fragment_pings_page.xml
@@ -37,7 +37,8 @@
                         android:id="@+id/noPingsTxt"
                         android:text="@string/noPings"
                         android:gravity="center_horizontal"
-                        android:padding="20dp"/>
+                        android:padding="20dp"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:layout_width="wrap_content"
