--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -6,6 +6,6 @@
         android:id="@+id/menu_home_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/ic_action_settings_icon"
         app:showAsAction="ifRoom" />
 </menu>
