Revert "Merge branch 'dev'"
This reverts commit f781761c15e649c77ae3864a78c220c062b8cc62, reversing
changes made to 8297dd49c04af4f4020df50fc03ac46040ff5625.

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -6,6 +6,6 @@
         android:id="@+id/menu_home_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:icon="@drawable/ic_action_settings_icon"
+        android:icon="@android:drawable/ic_menu_preferences"
         app:showAsAction="ifRoom" />
 </menu>
